tests/ui/const-generics/mgca/static-const-arg.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/static-const-arg.rs:12:16
   |
LL | const _: Foo<{ A }> = Foo;
   |                ^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/static-const-arg.rs:15:14
   |
LL | const _: Foo<A> = Foo;
   |              ^

error: aborting due to 2 previous errors

